--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,20 @@ body { width: 100%;}
     max-width: 100%;
     z-index: 120;
     position: relative;
+    line-height: 0;
+}
+
+.imageGallery-figcaption {
+    position: absolute;
+    left: 0;
+    bottom: 4px;
+    background-color: rgba(255,255,255,0.65);
+    z-index: 150;
+    padding: 5px;
+    color: #333333;
+    font-style: italic;
+    width: calc(100% - 10px);
+    text-align: center;
 }
 
 .imageGallery-arrow {
